# aqhealth

./: .gitignore  404.html  README.md  docker-compose.yml  index.html
backend/: .env.example  DEPLOYMENT.md  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: README.md  env.py
backend/alembic/versions/: 0001_baseline.py  0002_soft_delete_and_audit.py  0003_uniques_and_hash.py  0004_perf_indexes.py  0005_adt_dedup_and_fhir.py  0006_revoked_tokens_and_usage.py  001_initial_schema.py
backend/app/: config.py  constants.py  database.py  dependencies.py  main.py
backend/app/core/: audit.py  logging.py  observability.py  security_headers.py
backend/app/models/: __init__.py  action.py  adt.py  alert_rule.py  annotation.py  audit_log.py  boi.py  care_gap.py  care_plan.py  case_management.py  claim.py  clinical_exchange.py  (+23 more)
backend/data/: CMS_DATA_SOURCES.md  cms_cost_sharing_2026.json  cms_cost_sharing_2027.json  cms_county_rates_2026.json  hcc_groups_v28_2025midyear.json  hcc_mappings.json  quality_measures.json  zip_to_cms_county.json
backend/scripts/: bootstrap_admin.py  create_tenant.py  generate_insights.py  generate_synthetic_data.py  import_cms_county_rates.py  import_cms_hcc_data.py  import_cms_moop_data.py  post_ingestion.py  seed.py  seed_extended.py  setup.sh  setup_db.py
backend/tests/: conftest.py  test_api_routes.py  test_auth.py  test_care_gaps.py  test_database.py  test_expenditure.py  test_hcc_engine.py  test_health.py  test_ingestion.py  test_integration.py  test_tuva_e2e.py  test_tuva_export.py  test_tuva_runner.py  test_tuva_sync.py
(+494 files in other folders)
