[project]
name = "aqsoft-health-platform"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.18",
    "redis>=5.2",
    "arq>=0.26",
    "httpx>=0.28",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "anthropic>=0.42",
    "duckdb>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "factory-boy>=3.3",
]

[tool.setuptools.packages.find]
include = ["app*", "scripts*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests that require infrastructure (database, services)",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/workers/*", "app/prompts/*"]

[tool.coverage.report]
show_missing = true
fail_under = 25
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "pass",
]
